k8s/apps/attic/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: attic
  labels:
    goldilocks.fairwinds.com/enabled: "true"
