k8s/apps/attic/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attic
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: attic
  template:
    metadata:
      labels:
        app: attic
    spec:
      containers:
        - name: attic
          image: attic
          command: ["atticd", "-f", "/attic/server.toml"]
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /attic/server.toml
              subPath: server.toml
          resources:
            requests:
              cpu: 50m
              memory: 64M
            limits:
              cpu: 50m
              memory: 64M
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 6
      volumes:
        - name: config
          configMap:
            name: attic-config
