k8s/apps/attic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: attic
spec:
  selector:
    app: attic
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
