k8s/apps/attic/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attic
spec:
  parentRefs:
    - kind: Gateway
      name: shared
      namespace: default
  hostnames:
    - "attic.juliamertz.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: attic
          port: 8080
      timeouts:
        request: 0s
        backendRequest: 0s
